--- a/openocd.cfg
+++ b/openocd.cfg
@@ -2,7 +2,9 @@
 
 # Programmer, can be changed to several interfaces
 # Standard will be the STLink interface as this is the standard for STM32 dev boards
-source [find interface/stlink.cfg]
+source [find interface/jlink.cfg]
+# source [find interface/stlink.cfg]
+transport select swd
 
 # The target MCU. This should match your board
 source [find target/stm32f1x.cfg]
